@@ -1,10 +1,13 @@
 package jp.co.toshiba.ppocph.listener;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
+import org.springframework.security.authentication.DisabledException;
+import org.springframework.security.authentication.InsufficientAuthenticationException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -12,6 +15,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Component;
 
+import jp.co.toshiba.ppocph.common.PgCrowdConstants;
 import jp.co.toshiba.ppocph.dto.SecurityAdmin;
 import jp.co.toshiba.ppocph.entity.Employee;
 import jp.co.toshiba.ppocph.entity.EmployeeEx;
@@ -20,7 +24,6 @@ import jp.co.toshiba.ppocph.repository.EmployeeExRepository;
 import jp.co.toshiba.ppocph.repository.EmployeeRepository;
 import jp.co.toshiba.ppocph.repository.PgAuthRepository;
 import jp.co.toshiba.ppocph.repository.RoleExRepository;
-import jp.co.toshiba.ppocph.utils.StringUtils;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 
@@ -60,22 +63,23 @@ public final class PgCrowdUserDetailsService implements UserDetailsService {
 				.equal(root.get("loginAccount"), username);
 		final Specification<Employee> specification1 = Specification.where(where1);
 		final Employee employee = this.employeeRepository.findOne(specification1).orElseThrow(() -> {
-			throw new UsernameNotFoundException(StringUtils.EMPTY_STRING);
+			throw new DisabledException(PgCrowdConstants.MESSAGE_SPRINGSECURITY_LOGINERROR1);
 		});
 		final Optional<EmployeeEx> roleOptional = this.employeeExRepository.findById(employee.getId());
 		if (roleOptional.isEmpty()) {
-			throw new UsernameNotFoundException(StringUtils.EMPTY_STRING);
+			throw new InsufficientAuthenticationException(PgCrowdConstants.MESSAGE_SPRINGSECURITY_LOGINERROR2);
 		}
 		final Specification<RoleEx> where2 = (root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get("roleId"),
 				roleOptional.get().getRoleId());
 		final Specification<RoleEx> specification2 = Specification.where(where2);
 		final List<Long> authIds = this.roleExRepository.findAll(specification2).stream().map(RoleEx::getAuthId)
-				.collect(Collectors.toList());
+				.toList();
 		if (authIds.isEmpty()) {
-			throw new UsernameNotFoundException(StringUtils.EMPTY_STRING);
+			throw new AuthenticationCredentialsNotFoundException(PgCrowdConstants.MESSAGE_SPRINGSECURITY_LOGINERROR3);
 		}
-		final List<GrantedAuthority> authorities = this.pgAuthRepository.findAllById(authIds).stream()
-				.map(item -> new SimpleGrantedAuthority(item.getName())).collect(Collectors.toList());
+		final List<GrantedAuthority> authorities = new ArrayList<>();
+		this.pgAuthRepository.findAllById(authIds).stream().map(item -> new SimpleGrantedAuthority(item.getName()))
+				.toList().forEach(authorities::add);
 		return new SecurityAdmin(employee, authorities);
 	}
 }
